--- a/travel blog/index.html
+++ b/travel blog/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel Webpage Design 2022 | PRAROZ | 2022</title>
+    <title> Travel Webpage </title>
     
     <!--Style CSS-->
     <link rel="stylesheet" href="style.css">
